<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical">

    <Button
        android:id="@+id/fuelType92Btn"
        style="@style/GreenButton"
        android:background="@drawable/button_green_all_rounded"
        android:gravity="center"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:elevation="10dp"
        android:text="92"
        android:fontFamily="sans-serif-light"
        android:textStyle="bold"
        />


    <Button
        android:id="@+id/fuelType95Btn"
        style="@style/GreenButton"
        android:gravity="center"
        android:background="@drawable/button_green_all_rounded"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:text="95"
        android:fontFamily="sans-serif-light"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/fuelTypeDieselBtn"
        style="@style/GreenButton"
        android:gravity="center"
        android:background="@drawable/button_green_all_rounded"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:text="Diesel"
        android:textAllCaps="false"
        android:fontFamily="sans-serif-light"
        android:textStyle="bold"
        />
</LinearLayout>