...
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <Button
            android:id="@+id/login_google_button"
            android:layout_width="fill_parent"
            android:layout_height="40dp"

            android:layout_margin="5dp"
            android:background="@drawable/button_google_all_rounded"
            android:text="@string/google_login_text"
...
