<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="bottom"
    >

    <TextView
        android:id="@+id/fuelPriceTextView"
        style="@style/GreenButton"
        android:text="diesel. 12,87 kt"
        android:layout_width="wrap_content"
        android:background="@drawable/button_green_right_rounded"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:elevation="2dp"
        android:textAllCaps="false"
        android:textStyle = "bold"
        android:gravity="center_vertical"
        />
</LinearLayout>