<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:gravity="bottom"
    >

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/fuelPriceView"
        style="@style/GreenButton"
        android:alpha="0.8"

        tools:text="95. 12,87 kt"
        android:layout_width="wrap_content"
        android:fontFamily="sans-serif-light"
        android:background="@drawable/button_green_right_rounded"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:elevation="2dp"
        android:textAllCaps="false"

        android:gravity="center_vertical"
        />
</LinearLayout>