package com.fuelbuddy.mobile;

/**
 * Created by zjuroszek on 17.11.16.
 */

import android.support.test.rule.ActivityTestRule;
import android.support.test.runner.AndroidJUnit4;

import com.fuelbuddy.mobile.home.HomeActivity;

import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import static android.support.test.espresso.Espresso.onView;
import static android.support.test.espresso.action.ViewActions.click;
import static android.support.test.espresso.action.ViewActions.closeSoftKeyboard;
import static android.support.test.espresso.action.ViewActions.typeText;
import static android.support.test.espresso.assertion.ViewAssertions.matches;
import static android.support.test.espresso.matcher.ViewMatchers.withId;
import static android.support.test.espresso.matcher.ViewMatchers.withText;

@RunWith(AndroidJUnit4.class)

public class PressButtonTest {

    @Rule
    public ActivityTestRule<HomeActivity> mActivityRule =
            new ActivityTestRule<>(HomeActivity.class);

    @Test
    public void ensureTextChangesWork() {
        onView(withId(R.id.login_google_button))
                .perform(click());
    }

    @Test
    public void switchFragment() {

        onView(withId(R.id.login_google_button))
                .perform(click());
        onView(withId(R.id.fuelType92Btn)).check(matches(withText("92")));


        onView(withId(R.id.fuelType92Btn))
                .perform(click());
        onView(withId(R.id.map)).check(matches(withText("New Button")));
    }
}
